spark table tests